Supports smart sizing and append body

--- a/projects/demo-app/src/app/app.component.html
+++ b/projects/demo-app/src/app/app.component.html
@@ -20,10 +20,13 @@ and content editable fields. Try entering some @names below.</p>
     <textarea [mention]="items" class="form-control" cols="60" rows="4"></textarea>
 
     <h3>Content Editable</h3>
-    <div [mention]="items" class="form-control" contenteditable="true" style="border:1px lightgrey solid;min-height:88px"></div>
+    <div [mention]="items" class="form-control" contenteditable="true" style="border:1px lightgrey solid;min-height:88px" [mentionConfig]="{container: 'body'}"></div>
 
     <h3>Embedded Editor</h3>
     <app-demo-tinymce></app-demo-tinymce>
+
+    <h3>Container body</h3>
+    <textarea [mention]="items" class="form-control" cols="60" rows="4" [mentionConfig]="{container: 'body'}"></textarea>
 
 </ng-container>
 
