--- a/projects/angular-mentions/src/lib/mention-list.component.scss
+++ b/projects/angular-mentions/src/lib/mention-list.component.scss
@@ -1,12 +1,16 @@
-/** 
- * The internal mention styles can be disabled using the configuration setting leading to these 
+/**
+ * The internal mention styles can be disabled using the configuration setting leading to these
  * possible states:
- *  
+ *
  *   bootstrap not present; disableStyle false; (new default - use internal styles)
  *   bootstrap not present; disableStyle true;  (no style - so user can add their own styles)
  *   bootstrap present;     disableStyle true;  (original behavior - use bs styles)
  *   bootstrap present;     disableStyle false; (mixes internal style with bs)
  **/
+
+.mention-list {
+  z-index: 10000;
+}
 
 .mention-menu {
   position: absolute;
